<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">






    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@color/white">




        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="36dp">

        </com.mapbox.mapboxsdk.maps.MapView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/refresh1"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/tvTItle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/corona_live_tracking"
            android:textAlignment="textStart"
            android:textColor="#0000FF"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btnRefresh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>






    <LinearLayout

        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="115dp"
        >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="#321401"
            android:orientation="vertical">







            <LinearLayout
                android:baselineAligned="false"
                android:background="#ffffff"
                android:id="@+id/llTotalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llInfected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/infected"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:background="#FF9800"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_infected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/fetch"
                        android:textStyle="bold"
                        android:background="#FF9800"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDeath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:background="#FF0000"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/alldeath"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:background="#FF0000"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/fetch"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/recovered"
                        android:textAlignment="center"

                        android:background="#20BE25"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />

                    <TextView
                        android:id="@+id/tv_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/fetch"
                        android:textAlignment="center"
                        android:background="#20BE25"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:background="#D3D3D3">





                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/ic_search_black_night" />

                <EditText
                    android:maxLines="1"
                    android:id="@+id/edt_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="#000000" />






            </LinearLayout>

            <!--time -->
            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="textStart"
                android:textColor="#ffc0cb"


                />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:textSize="15sp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff957"
                android:text="Software Developed By Ujjawal"
                />



            <LinearLayout
                android:background="#000000"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView

                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1.3"
                    android:minLines="1"
                    android:text="@string/country"
                    android:textAlignment="textStart"
                    android:textColor="@color/black_night"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCases"
                        android:layout_width="0dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.5"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/confirm"
                        android:textAlignment="textEnd"

                        android:textColor="@color/black_night"
                        android:textSize="14sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp"
                        app:autoSizeTextType="uniform" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDeathCase"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.5"
                        android:textStyle="bold"

                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/death"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black_night"
                        android:textSize="14sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp"
                        app:autoSizeTextType="uniform" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRecoverCase"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.5"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/recover"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black_night"
                        android:textSize="14sp"
                        app:autoSizeMaxTextSize="20sp"
                        app:autoSizeMinTextSize="10sp"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvData"
                android:background="@drawable/wood2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
              android:shape="rectangle"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />


        </LinearLayout>


    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>